[package]
name = "fuzion-commons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
deadpool = "0.10.0"
deadpool-postgres = "0.12.1"
futures = "0.3.30"
log = "0.4.21"
serde = "1.0.197"
serde_json = "1.0.114"
thiserror = "1.0.58"
tokio-postgres = { version = "0.7.10", features = [ "with-serde_json-1", "with-chrono-0_4" ] }
