[package]
name = "fuzion-commons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-web-thiserror = "0.2.5"
async-trait = "0.1.77"
deadpool = "0.10.0"
deadpool-postgres = "0.12.1"
file-rotate = "0.7.5"
futures = "0.3.30"
lazy_static = "1.4.0"
log = "0.4.21"
regex = "1.10.3"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
slog = "2.7.0"
slog-async = "2.8.0"
slog-scope = "4.4.0"
slog-stdlog = "4.1.1"
slog-term = "2.9.1"
smart-default = "0.7.1"
thiserror = "1.0.58"
tokio-postgres = { version = "0.7.10", features = [ "with-serde_json-1", "with-chrono-0_4" ] }
