[package]
name = "fuzion-commons"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-http = "3.9.0"
actix-web = "4.9.0"
# actix-web-thiserror = "0.2.7"
actix-web-thiserror = { git = "https://github.com/enzious/actix-web-thiserror.git", branch = "fuzion-changes" }
askama = "0.14.0"
# actix-web-thiserror = { path = "../../actix-web-thiserror/actix-web-thiserror" }
async-trait = "0.1.77"
awc = { version = "3.5.1", features = [ "rustls-0_23-native-roots" ] }
bytes = "1.9.0"
deadpool = "0.12.1"
deadpool-postgres = "0.14.1"
file-rotate = "0.8.0"
futures = "0.3.31"
lazy_static = "1.5.0"
log = "0.4.22"
nix = { version = "0.31.1", features = ["process", "signal"] }
regex = "1.11.1"
rustls = "0.23.27"
rustls-native-certs = "0.8.1"
serde = "1.0.217"
serde_derive = "1.0.197"
serde_json = "1.0.134"
slog = "2.7.0"
slog-async = "2.8.0"
slog-scope = "4.4.0"
slog-stdlog = "4.1.1"
slog-term = "2.9.1"
smart-default = "0.7.1"
thiserror = "2.0.9"
tokio = { version = "1.49.0", features = ["fs", "macros", "process"] }
tokio-postgres = { version = "0.7.12", features = [ "with-serde_json-1", "with-chrono-0_4" ] }
url = "2.5.4"
users = "0.11.0"
